lấy ra danh sách các slug cần thiết về tourCategory
