# api/v1/routes/tourCategory.route.ts
@@ -2,7 +2,8 @@ import express, { Router } from "express";
 const router = express.Router();
 import * as tourCategoriesController from "../controller/tourCategory.controller";
 router.get("/", tourCategoriesController.index);
-router.get("/:slugTourCategory", tourCategoriesController.listTourCategory);
+router.get("/:slugTopicTour", tourCategoriesController.listTourCategory);
+router.get("/:slugTopicTour/:slugTour", tourCategoriesController.listTourTopic);
 
 const tourCategoryRouter: Router = router;
 export { tourCategoryRouter };
